--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,28 @@
   color: #61dafb;
 }
 
+
+table {
+  border: 2px solid #9a9a9a;
+  width: 70%;
+  height: 100%;
+}
+  
+th {
+  border-bottom: 1px solid black;
+  font-size: large;
+}
+  
+td {
+  text-align: center;
+  font-size: medium;
+}
+
+
+
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
