--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,3 +1,21 @@
+.about-us {
+    padding-top: 1%;
+    min-height: 130vh;
+  }
+  
+  .about-us-title {
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+  
+  .about-us-description {
+    font-size: 18px;
+    text-align: justify;
+    text-align: center;
+  }
+
+
 .aboutus-section {
     padding: 90px 0;
     margin: 0 0 0 0;
