--- a/src/components/AdminHome.css
+++ b/src/components/AdminHome.css
@@ -10,7 +10,7 @@
     font-size: 20px;
     background-color: lightblue;
 }
-.admincard-heading{
+/* .admincard-heading{
     font-size: large;
     font-weight: 500;
 }
@@ -19,4 +19,4 @@
     height: 20vh;
     width: 20vh;
     background-color: lightblue;
-}
+} */
